feat:Get security recommendation - implement endpoint for fetching security recommendation info - write documentation for the security recommendation info [Delivered #Security/info]
