# src/routes/v1/security.route.ts
@@ -3,7 +3,7 @@ import { securityHeader, securityRecommendations } from '../../controllers';
 
 const router = Router();
 
-router.post('/security/info', securityRecommendations);
-router.post('/security/headers', securityHeader);
+router.get('/security/info', securityRecommendations);
+router.get('/security/headers', securityHeader);
 
 export default router;
